test/classes/hannah/configSyncsNotSupported.good
configSyncNotSupported.chpl:1: error: configs of type sync are not supported
