test/classes/hannah/configSyncsNotSupported.chpl
config var n$ : sync inc;
